--- a/BarsCTR/index.html
+++ b/BarsCTR/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
@@ -25,7 +25,7 @@
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
                 <div class="mb-5">
-                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
@@ -39,9 +39,9 @@
 
             <ul>
                 <li><a href="./papers.html">A curated list of CTR prediction models</a> which have been tagged into different topics, such as feature-interactions, behavior-sequence-modeling, multi-task learning, cross-domain modeling, AutoML, etc.</li>
-                <li><a href="https://github.com/openbenchmark/BARS/tree/master/ctr_prediction/datasets#benchmark-datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits of each dataset.</li>
+                <li><a href="https://github.com/openbenchmark/BARS/tree/master/datasets#datasets" , target="_blank">A collection of public datasets for CTR prediction research</a>, and unique dataset IDs to track specific data splits of each dataset.</li>
                 <li><a href="https://github.com/xue-pai/FuxiCTR", target="_blank">An open-source library for CTR prediction</a> with stunning features in configurablity, tunablity, and reproduciblity.</li>
-                <li><a href="https://openbenchmark.github.io/ctr-prediction/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking scripts.</li>
+                <li><a href="https://openbenchmark.github.io/BarsCTR/leaderboard/criteo_x4_001.html", target="_blank">The most comprehensive benchmarking results</a> on tens of SOTA models and datasets. For each result, the detailed reproducing step is available along with the open-source benchmarking scripts.</li>
             </ul>
 
             <p><strong>BARS is a project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong> The ultimate goal of BARS is to drive more reproducible research in the development of recommender systems.</p>
@@ -53,9 +53,9 @@
         add_nav("CTR Prediction");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script src="./js/popper.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
