--- a/BarsCTR/leaderboard/criteo_x4_001.html
+++ b/BarsCTR/leaderboard/criteo_x4_001.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BarsCTR Benchmark | Avazu_x4_001</title>
+    <title>BarsCTR Benchmark | Criteo_x4_001</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,10 +25,9 @@
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
-
                 </ul>
                 <div class="mb-5">
-                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
@@ -36,13 +35,12 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on avazu_x4_001</a></h2>
-            There are two alternative benchmark protocols for avazu_x4: 
+            <h2 class="mb-4">Benchmarking on criteo_x4_001</a></h2>
+            There are two alternative benchmark protocols for criteo_x4: 
             <ul>
-                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_001">avazu_x4_001</a> (recommended setting)</li>
-                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_002">avazu_x4_002</a> and <a href="./avazu_x4_002.html">benchmarking results on avazu_x4_002</a></li>
+                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Criteo#Criteo_x4_001">criteo_x4_001</a> (recommended setting)</li>
+                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Criteo#Criteo_x4_002">criteo_x4_002</a> and <a href="./criteo_x4_002.html">benchmarking results on criteo_x4_002</a></li>
             </ul>
-
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
@@ -57,10 +55,10 @@
         src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
     <script
         src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
-    
+
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav("avazu_x4_001");
+        add_nav("criteo_x4_001");
     </script>
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -68,7 +66,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/avazu_x4_001.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/criteo_x4_001.json"));
     </script>
 
 </body>
