--- a/BarsCTR/leaderboard/frappe_x1.html
+++ b/BarsCTR/leaderboard/frappe_x1.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>BarsCTR Benchmark | taobao_x1</title>
+    <title>BarsCTR Benchmark | Frappe_x1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -16,8 +18,8 @@
         <nav id="sidebar">
             <div class="custom-menu">
                 <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                  <i class="fa fa-bars"></i>
-                  <span class="sr-only">Toggle Menu</span>
+                    <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle Menu</span>
                 </button>
             </div>
             <div class="p-4 pt-5">
@@ -25,7 +27,7 @@
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
                 </ul>
                 <div class="mb-5">
-                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
@@ -33,24 +35,26 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Taobao/README.md#Taobao_x1">taobao_x1</a></h2>
-
+            <h2 class="mb-4">Benchmarking on frappe_x1</a></h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Frappe#frappe_x1">frappe_x1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
-            <p><br>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</p>
+            <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
             <table id="table1" class="table table-bordered"></table>
 
         </div>
     </div>
-
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav("taobao_x1");
+        add_nav("frappe_x1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
 
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -58,9 +62,8 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/taobao_x1.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/frappe_x1.json"));
     </script>
-
 </body>
 
 </html>
