--- a/BarsMatch/index.html
+++ b/BarsMatch/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/css/style.css">
+        href="./css/style.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
@@ -26,7 +26,7 @@
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
                 <div class="mb-5">
-                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
@@ -44,14 +44,14 @@
                     tagged into different categories, such as CF, autoencoders, two-tower
                     models, GNNs, and so on.</li>
                 <li>A collection of <a
-                        href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets" ,
+                        href="https://github.com/openbenchmark/BARS/tree/master/datasets#datasets" ,
                         target="_blank">public datasets for research on candidate item matching</a>, and unique dataset
                     IDs to track specific data splits
                     for each dataset.</li>
-                <li>A list of <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/libs" ,
-                        target="_blank">open-source libraries for candidate item matching</a>.</li>
+                <li>An <<a href="https://github.com/xue-pai/MatchBox" ,
+                    target="_blank">open-source library for candidate item matching</a>.</li>
                 <li>Most importantly, <a
-                        href="https://openbenchmark.github.io/candidate-matching/leaderboard/amazonbooks_x0_001.html" ,
+                        href="https://openbenchmark.github.io/BarsMatch/leaderboard/amazonbooks_x0_001.html" ,
                         target="_blank">the most comprehensive benchmarking results</a> on various models and datasets. For each result, the detailed reproducing step is recorded along with the open-source benchmarking scripts.</li>
             </ul>
 
@@ -64,10 +64,10 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
-        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/popper.js"></script>
+        src="./js/popper.js"></script>
     <script
-        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/ctr-prediction/js/main.js"></script>
+        src="./js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
