--- a/BarsMatch/leaderboard/amazonbooks_x1.html
+++ b/BarsMatch/leaderboard/amazonbooks_x1.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>BarsCTR Benchmark | Avazu_x4_002</title>
+    <title>BarsMatch Benchmark | Amazonbooks_m1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/css/style.css">
+        href="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/css/style.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
@@ -24,10 +24,9 @@
             </div>
             <div class="p-4 pt-5">
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
-                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul">
-                </ul>
+                <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
                 <div class="mb-5">
-                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
@@ -35,12 +34,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on avazu_x4_002</a></h2>
-            There are two alternative benchmark protocolsc for avazu_x4: 
-            <ul>
-                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_001">avazu_x4_001</a> and <a href="./avazu_x4_001.html">benchmarking results on avazu_x4_001</a></li>
-                <li>See benchmark protocol <a href="https://github.com/openbenchmark/BARS/blob/master/ctr_prediction/datasets/Avazu#Avazu_x4_002">avazu_x4_002</a></li>
-            </ul>
+            <h2 class="mb-4">Benchmarking on amazonbooks_x1</h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets/Amazon#amazonbooks_x1">amazonbooks_x1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
@@ -48,25 +43,27 @@
 
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
-
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav("avazu_x4_002");
+        add_nav(page_name="amazonbooks_x1");
     </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/js/popper.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/js/bootstrap.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io/candidate-matching/js/main.js"></script>
+
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/ctr_prediction/leaderboard/avazu_x4_002.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/amazonbooks_x1.json"));
     </script>
+
 </body>
+
 </html>
