--- a/BarsMatch/leaderboard/yelp18_x1.html
+++ b/BarsMatch/leaderboard/yelp18_x1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BarsMatch Benchmark | Amazonbooks_m1</title>
+    <title>BarsMatch Benchmark | Yelp18_m1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,7 +26,7 @@
                 <h1><a href="https://openbenchmark.github.io/BARS" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5 no-bullet" id="nav_ul"></ul>
                 <div class="mb-5">
-                    <img src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@main/BARS/img/wechat.jpg" title="Join Wechat Group">
+                    <img src="https://openbenchmark.github.io/BARS/img/wechat.jpg" title="Join Wechat Group">
                     <div style="padding-top:2px">
                     <div style="font-size:14px">Wechat Group</div></div>
                 </div>
@@ -34,8 +34,8 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on amazonbooks_x1</h2>
-            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets/Amazon#amazonbooks_x1">amazonbooks_x1</a><br></p>
+            <h2 class="mb-4">Benchmarking on yelp18_x1</h2>
+            <p>See benchmark protocol: <a href="https://github.com/openbenchmark/BARS/tree/master/candidate_matching/datasets/Yelp#yelp18_x1">yelp18_x1</a><br></p>
             <!-- Add tables and charts -->
             <div id="chart1"></div>
             <p><br><i>Reminder: one can sort the table by clicking on column headers, or filter the results by searching keywords.</i></p>
@@ -45,7 +45,7 @@
     </div>
     <script type="text/javascript" src="../js/nav.js"></script>
     <script type="text/javascript">
-        add_nav(page_name="amazonbooks_x1");
+        add_nav(page_name="yelp18_x1");
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script
@@ -61,9 +61,8 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/amazonbooks_x1.json"));
+            "https://cdn.jsdelivr.net/gh/openbenchmark/BARS/candidate_matching/leaderboard/yelp18_x1.json"));
     </script>
-
 </body>
 
 </html>
